Do not hit your own bunkers

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 ALCHEMY_KEY="YOUR_ALCHEMY_KEY_GOES_HERE"
 PRIVATE_KEY="YOUR_PRIVATE_KEY_GOES_HERE"
+OWNER_OF_MY_BUNKERS="THE_ADDRESS_THAT_OWNS_YOUR_BUNKERS_GOES_HERE"
